fix: removed problematic env endpoints, crowdsec config explicit, additional svc props
