# openapi.yaml
@@ -274,82 +274,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
-  /projects/{project}/services/{service}/env:
-    get:
-      summary: Get Env Handler
-      description: Get the list of a project's service' env vars
-      operationId: get_env_handler_projects__project__services__service__env_get
-      security:
-      - APIKeyQuery: []
-      - APIKeyHeader: []
-      - HTTPBearer: []
-      parameters:
-      - name: project
-        in: path
-        required: true
-        schema:
-          type: string
-          title: Project
-      - name: service
-        in: path
-        required: true
-        schema:
-          type: string
-          title: Service
-      responses:
-        '200':
-          description: Successful Response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Env'
-        '422':
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HTTPValidationError'
-    patch:
-      tags:
-      - Env
-      summary: Patch Env Handler
-      description: Update env for a project service
-      operationId: patch_env_handler_projects__project__services__service__env_patch
-      security:
-      - APIKeyQuery: []
-      - APIKeyHeader: []
-      - HTTPBearer: []
-      parameters:
-      - name: project
-        in: path
-        required: true
-        schema:
-          type: string
-          title: Project
-      - name: service
-        in: path
-        required: true
-        schema:
-          type: string
-          title: Service
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Env'
-      responses:
-        '200':
-          description: Successful Response
-          content:
-            application/json:
-              schema: {}
-        '422':
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HTTPValidationError'
   /services:
     get:
       summary: Get Services Handler
